@@ -3,6 +3,7 @@ Changes from 1.12.0 to 1.11.0
 ** Bug
     * [FELIX-4030] - Generated metatype file contains all metatype infos
     * [FELIX-4023] - SCR-Plugin not working reliably in m2e 1.3.1 
+    * [FELIX-3542] - Escape property values used as Metatype default values
 
 
 Changes from 1.11.0 to 1.10.0
