@@ -2,6 +2,8 @@ Changes from 1.6.0 to 1.5.0
 ---------------------------
 ** Bug
     * [FELIX-4030] - Generated metatype file contains all metatype infos
+    * [FELIX-3542] - Escape property values used as Metatype default values
+
 
 Changes from 1.5.0 to 1.4.0
 ----------------------------
